--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title> David Umoessien's Portfolio</title>
+		<title> Ememobong David Umoessien's Portfolio</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -19,7 +19,7 @@
 
 				<!-- Intro -->
 					<div id="intro">
-						<h1>EMEMOBONG DAVID UMOESSIEN<br />
+						<h1> DAVID UMOESSIEN<br />
 						</h1>
 						<p>Data Analyst skilled in Tableau, SQL and Python <a href="https://html5up.net/license"></a>.</p>
 						<ul class="actions">
