--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 				<!-- Intro -->
 					<div id="intro">
-						<h1> DAVID UMOESSIEN<br />
+						<h1> EMEMOBONG DAVID UMOESSIEN<br />
 						</h1>
 						<p>Data Analyst skilled in Tableau, SQL and Python <a href="https://html5up.net/license"></a>.</p>
 						<ul class="actions">
