--- a/index.html
+++ b/index.html
@@ -79,11 +79,11 @@
 								<article>
 									<header>
 									
-										<h2><a href="#">Ante mattis<br />
-										interdum dolor</a></h2>
+										<h2><a href="#">Premier League Fouls Committed Analsyis<br />
+										</a></h2>
 									</header>
-									<a href="#" class="image fit"><img src="images/pic04.jpg" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
+									<a href="https://public.tableau.com/app/profile/ememobong.umoessien/viz/PremierLeagueFoulsCommittedAnalysis/PremierLeagueFoulsCommittedAnalysisDashboard" class="image fit"><img src="images/pic04.jpg" alt="" /></a>
+									<p>A look into the English Premier League statistics of teams faring as regards to their fouls committed and conceded between 2023 and 2024.</p>
 									<ul class="actions special">
 										<li><a href="#" class="button">Full Story</a></li>
 									</ul>
