--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 										<h2><a href="#">Premier League Fouls Committed Analsyis<br />
 										</a></h2>
 									</header>
-									<a href="https://public.tableau.com/app/profile/ememobong.umoessien/viz/PremierLeagueFoulsCommittedAnalysis/PremierLeagueFoulsCommittedAnalysisDashboard" class="image fit"><img src="images/pic04.jpg" alt="" /></a>
+									<a href="https://public.tableau.com/app/profile/ememobong.umoessien/viz/PremierLeagueFoulsCommittedAnalysis/PremierLeagueFoulsCommittedAnalysisDashboard" class="image fit"><img src="images/Premier League.jpg" alt="" /></a>
 									<p>A look into the English Premier League statistics of teams faring as regards to their fouls committed and conceded between 2023 and 2024.</p>
 									<ul class="actions special">
 										<li><a href="#" class="button">Full Story</a></li>
